--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@sentry/browser": "^5.6.2",
     "@sentry/integrations": "^5.6.1",
     "axios": "^0.18.0",
-    "cordova-android": "^8.0.0",
+    "cordova-android": "^7.0.0",
+    "cordova-hot-code-push-plugin": "^1.5.3",
     "cordova-plugin-app-update": "git+ssh://git@c.koall.io:ko-plugins/cordova-plugin-app-update.git",
     "cordova-plugin-appversion": "^1.0.0",
     "cordova-plugin-share": "^0.1.3",
     "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "^2.6.5",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
     "mint-ui": "^2.2.13",
+    "nl.madebymark.share": "~0.1.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "qrcode": "^1.3.3",
     "v-tap": "^3.0.3",
