--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cordova-plugin-appversion": "^1.0.0",
     "cordova-plugin-share": "^0.1.3",
     "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "~1.3.4",
     "core-js": "^2.6.5",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
@@ -70,7 +71,6 @@
       "nl.madebymark.share": {}
     },
     "platforms": [
-      "ios",
       "android"
     ]
   }
