--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.18.0",
     "cordova-android": "^8.1.0",
     "cordova-hot-code-push-plugin": "^1.5.3",
-    "cordova-plugin-app-update": "git+ssh://git@c.koall.io:ko-plugins/cordova-plugin-app-update.git",
+    "cordova-plugin-app-update": "http://c.koall.io/ko-plugins/cordova-plugin-app-update.git",
     "cordova-plugin-appversion": "^1.0.0",
     "cordova-plugin-share": "^0.1.3",
     "cordova-plugin-statusbar": "^2.4.3",
